--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.0/spacelab/bootstrap.min.css" integrity="sha512-5EW3tVDKxRrl0NMb2ycRbTfU8Z/ReudgdryXYSqTZ1WXu0MBurAc0zSyUC68yV+jGY6oHaAwSHKs4+UfnVn1pQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <app-root></app-root>
